# eschergraph

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  visual.html
.github/workflows/: ci.yml  docs-release.yml  release.yml
.semversioner/: 0.1.0.json  0.2.0.json  0.2.1.json  0.2.2.json  0.2.3.json  0.2.4.json  0.2.5.json  0.3.0.json  0.3.1.json
.semversioner/next-release/: minor-20240913114022024870.json  minor-20240924073544980188.json  minor-20240924092509210471.json  patch-20240913113848594835.json  patch-20240913113930081749.json
docs/: docusaurus.config.js  index.html  package-lock.json  package.json
docs/.semversioner/: 0.0.1.json
docs/css/: custom.css
docs/docs/: coming_soon.md  future_plans.md  getting_started.md  intro.md  intro1.md
docs/docs/explained-eschergraph/: File Parsing.md  Graph building.md  _category_.json
docs/docs/tutorial-graph/: File parser.md  Graph building.md  _category_.json
docs/src/pages/: index.js
eschergraph/: __init__.py  config.py  exceptions.py  main.py
eschergraph/agents/: __init__.py  embedding.py  embedy.py  jinja_helper.py  llm.py  protocols.py  reranker.py
eschergraph/agents/prompts/: accuracy_check.jinja  answer_check.jinja  community_prompt.jinja  complete_check.jinja  elaboration_plan.jinja  extra_edges_plan.jinja  filter_questions.jinja  identifying_nodes.jinja  importance.jinja  json_build.jinja  json_figure.jinja  json_keywords.jinja  json_property.jinja  json_table.jinja  keywords.jinja  main_topics.jinja  ner_query.jinja  property.jinja  questions.jinja  reasonable_check.jinja  retrieval_check.jinja  summary.jinja  topic_relations.jinja
eschergraph/agents/prompts/search/: entity_extraction.jinja  global_search_context.jinja  importance_rank.jinja  question_with_context.jinja  rag_prompt.jinja
eschergraph/agents/providers/: groq.py  jina.py  openai.py
eschergraph/benchmarking/: graph_build_evaluation.py  sampling.py  utils.py
eschergraph/builder/: __init__.py  build_log.py  build_pipeline.py  building_tools.py  models.py
eschergraph/builder/reader/: __init__.py  crop_images.py  reader.py
eschergraph/builder/reader/fast_pdf_parser/: __init__.py  models.py  parser.py
eschergraph/builder/reader/multi_modal/: crop_images.py  data_structure.py  multi_modal_parser.py
eschergraph/builder/reader/pdf_document_layout_analysis/: __init__.py  pdf_segment.py
eschergraph/builder/reader/pdf_parser_large/: data_structure.py  pdf_parser_large.py
eschergraph/evaluation/: graph_build_evaluation.py
eschergraph/graph/: __init__.py  base.py  build_pipeline.py  comm_graph.py  community.py  community_alg.py  edge.py  graph.py  loading.py  metadata.py  node.py  property.py  utils.py
eschergraph/graph/persistence/: __init__.py  base.py  change_log.py  document.py  exceptions.py  factory.py  metadata.py  repository.py  respository.py
eschergraph/graph/persistence/vector_db/: __init__.py  factory.py  vector_db.py  vector_db_factory.py
eschergraph/graph/search/: attribute_search.py  global.py  global_search.py  quick_search.py
eschergraph/persistence/: __init__.py  document.py  exceptions.py  factory.py  metadata.py  repository.py
eschergraph/persistence/adapters/simple_repository/: __init__.py  models.py  simple_repository.py  utils.py
eschergraph/persistence/vector_db/: __init__.py  factory.py  vector_db.py  vector_search_result.py
eschergraph/persistence/vector_db/adapters/: __init__.py  chromadb.py
eschergraph/storage/: __init__.py  persistence.py
eschergraph/tools/: community_builder.py  estimator.py  fuzzy_matcher.py  merge.py  node_matcher.py  prepare_sync_data.py  reader.py  reranker.py
eschergraph/tools/fast_pdf_parser/: __init__.py  parser.py  pdf_features.py
eschergraph/tools/pdf_document_layout_analysis/: pdf_segment.py
eschergraph/tools/pdf_document_layout_analysis/fast_trainer/: model_configuration.py  paragraph.py  paragraph_extractor_trainer.py
eschergraph/tools/pdf_document_layout_analysis/pdf_features/: pdf_features.py  pdf_font.py  pdf_modes.py  pdf_page.py  pdf_token.py
eschergraph/tools/pdf_document_layout_analysis/pdf_parser_large/: data_structure.py  pdf_parser_large.py
eschergraph/tools/pdf_document_layout_analysis/pdf_token_type_labels/: label.py  page_labels.py  pdf_labels.py
eschergraph/visualization/: __init__.py  community.py  dashboard_maker.py  visualizer.py
pinkgraph/: exceptions.py  main.py
pinkgraph/agents/: jinja_helper.py  llm.py  protocols.py  tools.py
pinkgraph/agents/prompts/: add_edge.jinja  add_node.jinja  extra_edge.jinja  initial_plan.jinja
pinkgraph/agents/providers/: openai.py
scripts/: dspy_reasonable.py  evaluate_global_search.py  evaluate_retrieval.py  multi_modal_build.py  parser.py  sample_tune_set.py  synthetic_qa.py
test_files/: txt_file.txt
tests/: conftest.py
tests/agents/: test_embeddings.py  test_jinja_prompt_helper.py  test_reranker.py
tests/builder/: integration_test_pipeline.py  test_build_pipeline.py  test_building_tools.py  test_crop_img.py  test_multi_modal.py  test_reader.py
tests/graph/: conftest.py  def test_utils.py  help.py  test_base.py  test_build_pipeline.py  test_community.py  test_community_alg.py  test_edge.py  test_getter_setter.py  test_graph.py  test_node.py  test_utils.py
tests/graph/persistence/: test_factory.py  test_metadata.py
tests/graph/search/: test_global_search.py  test_quick_search.py
tests/persistence/: test_factory.py  test_metadata.py
tests/persistence/vector_db/: help.py  test_vector_db_factory.py
tests/providers/: test_openai.py
tests/tools/: test_community_builder.py  test_fuzzy_matcher.py  test_merge.py  test_node_matcher.py  test_reader.py  test_sync_vector_db.py
tests/tools/fast_pdf_parser/: test_parser.py
tests/visualization/: conftest.py  test_community.py  test_visualizer.py
tests_integration/: build.py  build_global_search.py  build_search.py  chunk_optimized.py  document_summary.py  main_topics.py
tests_integration/builder/: integration_test_build_pipeline.py
(+48 files in other folders)
