[tool.poetry]
name = "eschergraph"
version = "0.1.0"
description = "The library that uses AI agents to enable building and searching in generalized knowledge graphs."
authors = ["PinkDot AI"]
license = "MIT"
readme = "README.md"
packages = [{ include = "pinkgraph" }]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^23.2.0"
jinja2 = "^3.1.4"
tenacity = "^8.4.2"
openai = "^1.35.7"
chromadb = "^0.5.5"
pymilvus = "^2.4.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.2.2"
assertpy = "^1.1"
coverage = "^7.5.4"
semversioner = "^2.0.5"
poethepoet = "^0.27.0"
pytest-repeat = "^0.9.3"

[tool.poetry_dynamic_versioning]
enable = true
style = "pep440"
vcs = "git"
bump = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- else -%}
        {{ serialize_pep440(base, stage, revision, dev=distance) }}
    {%- endif -%}
"""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry_dynamic_versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

# A task runner for the semver releases
# Could also be used for tests, or to generate coverage reports
[tool.poe.tasks]
_semversioner_release = "semversioner release"
_semversioner_changelog = "semversioner changelog > CHANGELOG.md"
_semversioner_update_toml_version = "update-toml --path tool.poetry.version --value \"$(semversioner current-version)\" pyproject.toml"

[[tool.poe.tasks.release]]
sequence = [
    '_semversioner_release',
    '_semversioner_changelog',
    '_semversioner_update_toml_version',
]
ignore_fail = 'return_non_zero'

[tool.ruff]
preview = true
exclude = [
    ".git",
    "build",
    "__pycache__",
]
line-length = 88
indent-width = 2
target-version = "py310"

[tool.ruff.lint]
ignore = [
    # Unnecessary collection call
    "C408",
    # Unnecessary map usage
    "C417",
    # Object names too complex
    "C901",
    # Local variable is assigned to but never used
    "F841",
    # Raise with from clause inside except block
    "B904",
    # Zip without explicit strict parameter
    "B905",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100"
]
select = [
    "B9",
    "C",
    "D",
    "F",
    "W",
    "YTT",
    "ASYNC",
    "E225",
    "E227",
    "E228",
]
[tool.ruff.lint.extend-per-file-ignores]
# Ignore all docstrings in tests
"tests/*" = ["D"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Indicate here when a ruff lint rule should be ignored in a file

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 40

[tool.mypy]
# The strictest settings extracted from the mypy docs
# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

ignore_missing_imports = true

# Getting these passing should be easy
strict_equality = true
extra_checks = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true
